--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "bootstrap": "^4.6.0",
+    "mdb-angular-ui-kit": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.1",
-    "@angular/cli": "^15.1.6",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
