--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
-    "@angular/common": "~11.2.3",
-    "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
-    "@angular/forms": "~11.2.3",
-    "@angular/platform-browser": "~11.2.3",
-    "@angular/platform-browser-dynamic": "~11.2.3",
-    "@angular/router": "~11.2.3",
+    "@angular/animations": "~14.2.3",
+    "@angular/common": "~14.2.3",
+    "@angular/compiler": "~14.2.3",
+    "@angular/core": "~14.2.3",
+    "@angular/forms": "~14.2.3",
+    "@angular/platform-browser": "~14.2.3",
+    "@angular/platform-browser-dynamic": "~14.2.3",
+    "@angular/router": "~14.2.3",
     "bootstrap": "^4.6.0",
     "mdb-angular-ui-kit": "^4.0.0",
     "rxjs": "~6.6.0",
@@ -26,11 +26,12 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular/cli": "^15.1.6",
+    "@angular/compiler-cli": "~14.2.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.11.1",
+    "ajv": "^7.2.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
